[project]
name = "haxxor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "impacket>=0.12.0",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langsmith>=0.3.18",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "uuid>=1.30",
]
